--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,19 @@
 version: "3.9"
 services:
-  kvstore:
-    image: kvstore
-    build:
-      dockerfile: ./Dockerfile
-    ports:
-      - "8001:8001"
-    depends_on:
-      - db
-    restart: unless-stopped
-    # deploy:
-    #   resources:
-    #     limits:
-    #       cpus: "2"
-    #       memory: 1G
+  #  kvstore:
+  #    image: kvstore
+  #    build:
+  #      dockerfile: ./Dockerfile
+  #    ports:
+  #      - "8001:8001"
+  #    depends_on:
+  #      - db
+  #    restart: unless-stopped
+  #    # deploy:
+  #    #   resources:
+  #    #     limits:
+  #    #       cpus: "2"
+  #    #       memory: 1G
   ##Database config
   db:
     image: mysql:8.0.31
@@ -21,11 +21,12 @@ services:
       - "6601:3306"
     environment:
       - MYSQL_ROOT_PASSWORD=root
+    #      - MYSQL_DATABASE=randomstring
     restart: unless-stopped
     volumes:
-      - db_data:/var/lib/mysql
+      - db_data_randomstring:/var/lib/mysql
       - ./deployment/init.sql:/docker-entrypoint-initdb.d/init.sql
 
 volumes:
-  db_data:
+  db_data_randomstring:
     driver: local
