--- a/src/main/resources/application-default.yml
+++ b/src/main/resources/application-default.yml
@@ -2,23 +2,23 @@ server:
   port: 8001
 
 spring:
-  application.name: kvstore
+  application.name: randomstring
   datasource:
-    url: jdbc:mysql://${DOCKER_HOST_IP:localhost}:6601/kvstore
+    url: jdbc:mysql://${DOCKER_HOST_IP:localhost}:6601/poollearn
     username: root
     password: root
     driver-class-name: com.mysql.jdbc.Driver
   jpa:
     show-sql: true
-
-logging:
-  level:
-    root: INFO
-    org.springframework.web: INFO
-    org:
-      hibernate:
-        DEBUG
-        # sql: debug
-        # type:
-        #   descriptor:
-        #     sql: TRACE
+#
+#logging:
+#  level:
+#    root: INFO
+#    org.springframework.web: INFO
+#    org:
+#      hibernate:
+#        DEBUG
+#        # sql: debug
+#        # type:
+#        #   descriptor:
+#        #     sql: TRACE
