--- a/src/main/resources/application-docker.yml
+++ b/src/main/resources/application-docker.yml
@@ -1,3 +1,3 @@
 spring:
   datasource:
-    url: jdbc:mysql://${DOCKER_HOST_IP:db}:3306/kvstore
+    url: jdbc:mysql://${DOCKER_HOST_IP:db}:3306/poollearn
