--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,20 @@
 version: "3.9"
 services:
-  #  kvstore:
-  #    image: kvstore
-  #    build:
-  #      dockerfile: ./Dockerfile
-  #    ports:
-  #      - "8001:8001"
-  #    depends_on:
-  #      - db
-  #    restart: unless-stopped
-  #    # deploy:
-  #    #   resources:
-  #    #     limits:
-  #    #       cpus: "2"
-  #    #       memory: 1G
-  ##Database config
+#  randomstring:
+#    image: randomstring
+#    build:
+#      dockerfile: ./Dockerfile
+#    ports:
+#      - "8001:8001"
+#    depends_on:
+#      - db
+#    restart: unless-stopped
   db:
     image: mysql:8.0.31
     ports:
       - "6601:3306"
     environment:
       - MYSQL_ROOT_PASSWORD=root
-    #      - MYSQL_DATABASE=randomstring
     restart: unless-stopped
     volumes:
       - db_data_randomstring:/var/lib/mysql
